Fix logo on mobile version

--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -53,13 +53,14 @@ body{
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  padding: 10px 20px 20px 20px;
+  padding: 0px 20px 20px 20px;
 }
 
 .page-header__item {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 200px;
-          flex: 0 1 200px
+          flex: 0 1 200px;
+          height: fit-content;
 }
 
 .page-header__item:last-child {
@@ -159,7 +160,7 @@ a:active {
 .profile__picture {
   float: left;
   width: 250px;
-  margin-right: 40px;
+  
   border-radius: 50%;
 
 }
